<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24" />

    <item
        android:id="@+id/menu_history"
        android:title="@string/history"
        android:icon="@drawable/ic_baseline_history_24" />

    <item
        android:id="@+id/menu_fab_transfer"
        android:title="@string/transfer"
        android:enabled="false" />

    <item
        android:id="@+id/menu_topup"
        android:title="@string/topup"
        android:icon="@drawable/ic_baseline_add_card_24" />

    <item
        android:id="@+id/menu_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person_24" />


</menu>