<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/profile"
            android:textColor="#df7154"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgview_profile"
            android:layout_width="149dp"
            android:layout_height="142dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile"
            app:srcCompat="@drawable/illustration_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgview_profile"
            app:layout_constraintVertical_bias="0.314">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/firstName"
                    android:textColor="#df7154"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/edt_firstName_profile"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="1dp"
                    android:hint=""
                    android:inputType="textPersonName"
                    android:paddingStart="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/lastName"
                    android:textColor="#df7154"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/edt_lastName_profile"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="5dp"
                    android:hint=""
                    android:inputType="textPersonName"
                    android:paddingStart="20dp" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_update"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_rounded"
                android:text="@string/update"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_logout"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_rounded"
                android:text="@string/logout"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_save"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_rounded"
                android:text="@string/save"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_cancel"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_rounded"
                android:text="@string/cancel"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
